--- a/style/style.css
+++ b/style/style.css
@@ -138,6 +138,7 @@ a {
     box-sizing: border-box;
     word-wrap: break-word;
     background-color: rgba(255, 255, 255, 0.3);
+    transition: 0.5s;
 }
 
 #output article:hover {
