--- a/views/styles.css
+++ b/views/styles.css
@@ -3,66 +3,50 @@
 }
 
 body {
-    border: 1px solid #ccc;
     font-family: sans-serif;
-    margin: 30px auto;
-    padding: 30px;
-    width: 800px;
+    margin: 0;
+    padding: 0;
 }
 
 p {
     line-height: 1.5;
 }
 
-.app-header {
-    color: rgb(39, 72, 102);
+.container {
+    width: 800px;
+    height: 100vh;
+    margin: 0 auto;
+    padding: 10px 20px 10px 30px;
+    background: #ddd;
 }
 
-.all-news-link {
-    color: rgb(4, 117, 245);
+.headline {
+    color: #761703;
+}
+
+.link {
+    color: #26ACAF;
     text-decoration: none;
 }
 
-.all-news-link:hover {
+.link:hover {
     text-decoration: underline;
 }
 
-.message-header {
-    background: #333;
-    color: #fff;
-    margin: 30px;
-    padding: 10px;
-    text-align: center;
-}
-
 .news-list a {
-    color: rgb(4, 117, 245);
+    color: #26ACAF;
     display: block;
-    padding: 10px;
     text-decoration: none;
+    padding-bottom: 10px;
 }
 
 .news-list a:hover {
     text-decoration: underline;
 }
 
-.news-date {
-    color: #aaa;
+.date {
+    color: #3F9A14;
     font-style: italic;
-}
-
-.back-link {
-    background: #eee;
-    border: 1px solid transparent;
-    color: #333;
-    font-size: smaller;
-    padding: 5px 15px;
-    text-decoration: none;
-}
-
-.back-link:hover {
-    background: #ddd;
-    border: 1px solid rgb(122, 122, 122);
 }
 
 @media screen and (max-width: 900px) {
