--- a/views/styles.css
+++ b/views/styles.css
@@ -49,6 +49,34 @@ p {
     font-style: italic;
 }
 
+form {
+    margin: 10px 20px;
+}
+
+.form-container {
+    width: 700px;
+    display: flex;
+    flex-flow: column;
+}
+
+.form-text {
+    height: 100px;
+    resize: none;
+}
+
+.form-container > * {
+    padding-top: 10px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.button {
+    display: inline-block;
+}
+
 @media screen and (max-width: 900px) {
     body {
         width: 100%;
