feature/ add some styles and mixin

--- a/fc-angular2/src/fc-shared-components/fc-source-name/fc-source-name.less
+++ b/fc-angular2/src/fc-shared-components/fc-source-name/fc-source-name.less
@@ -1,13 +1,15 @@
+@import "../../fc-shared-styles/variables.less";
+
 .source-name {
   &--backdrop {
     padding: 10px 0;
-    background-color: #b37700;
+    background-color: @brown-orange;
   }
 
   &--headline {
     margin: 0;
     text-align: center;
     font-size: 40px;
-    color: #fff;
+    color: @white;
   }
 }
