--- a/fc-angular2/src/app/app.component.html
+++ b/fc-angular2/src/app/app.component.html
@@ -5,5 +5,15 @@
   ></fc-source-name>
   <fc-filter-panel filter-panel></fc-filter-panel>
 </fc-header>
-<router-outlet></router-outlet>
-<fc-footer></fc-footer>
+<!--<router-outlet></router-outlet>-->
+<main>
+  <div class="wrapper">
+    <fc-main-page-article
+      *ngFor="let article of articlesList"
+      [article]="article"
+    ></fc-main-page-article>
+  </div>
+</main>
+<fc-footer>
+  <button class="footer-button">{{loadMore}}</button>
+</fc-footer>
