--- a/fc-angular2/src/app/app.component.less
+++ b/fc-angular2/src/app/app.component.less
@@ -1,8 +1,25 @@
-router-outlet {
+@import "../fc-shared-styles/variables.less";
+@import "../fc-shared-styles/mixins.less";
+//router-outlet {
+//  flex: 1 0 auto;
+//}
+//
+main {
   flex: 1 0 auto;
 }
 
 fc-header,
 fc-footer {
   flex: 0 0 auto;
+}
+
+.wrapper,
+.footer-button {
+  width: @wrapper-width;
+  margin: 0 auto;
+}
+
+.footer-button {
+  .button(@background-color: @yellow-green, @font-size: 18px, @padding-height: 15px);
+  .side-padding-zero();
 }
