--- a/fc-angular2/src/fc-shared-components/fc-footer/fc-footer.less
+++ b/fc-angular2/src/fc-shared-components/fc-footer/fc-footer.less
@@ -1,4 +1,24 @@
-footer {
+@import "../../fc-shared-styles/variables.less";
+
+.footer {
   display: flex;
-  justify-content: space-between;
+  flex-flow: column;
+
+  &--main-content {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    background-color: @brown-orange;
+  }
+
+  &-link, &-content {
+    color: @white;
+    font-size: 16px;
+  }
+
+  &-link {
+    text-decoration: none;
+  }
 }
