--- a/fc-angular2/src/fc-shared-components/fc-header/fc-header.less
+++ b/fc-angular2/src/fc-shared-components/fc-header/fc-header.less
@@ -1,3 +1,5 @@
+@import "../../fc-shared-styles/mixins.less";
+
 .header {
   &-main-content {
     display: flex;
@@ -11,6 +13,10 @@
 
   &-text {
     margin: 0 10px 0 auto;
+  }
+
+  &-button {
+    .button();
   }
 }
 
