feature/ routing with mocked data

--- a/fc-angular2/src/app/app.component.html
+++ b/fc-angular2/src/app/app.component.html
@@ -7,15 +7,9 @@
     <fc-filter-panel filter-panel></fc-filter-panel>
   </ng-container>
 </fc-header>
-<!--<router-outlet></router-outlet>-->
 <main>
   <div class="wrapper">
-    <!--<fc-main-page-article-->
-      <!--*ngFor="let article of articlesList"-->
-      <!--[article]="article"-->
-    <!--&gt;</fc-main-page-article>-->
-    <!--<fc-article-page [article]="articlesList[0]"></fc-article-page>-->
-    <fc-edit-page></fc-edit-page>
+    <router-outlet></router-outlet>
   </div>
 </main>
 <fc-footer>
