--- a/fc-angular2/src/fc-shared-styles/mixins.less
+++ b/fc-angular2/src/fc-shared-styles/mixins.less
@@ -6,6 +6,7 @@
   padding: @padding-height 10px;
   font-size: @font-size;
   cursor: pointer;
+  text-align: center;
 
   &:hover {
     background-color: darken(@background-color, 20);
