refactor/ adopt to new articles

--- a/fc-angular2/src/fc-main-page/fc-article/fc-article.less
+++ b/fc-angular2/src/fc-main-page/fc-article/fc-article.less
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-between;
   margin: 5px 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid @black;
 
   &-info {
     display: flex;
@@ -17,14 +19,15 @@
 
   &-description {
     margin: 0 auto 0 10px;
+    width: 600px;
   }
 
   &-text {
-    margin-bottom: 0;
+    margin: 5px 0 0 0;
   }
 
   &-headline {
-    margin-top: 0;
+    margin: 0 0 5px 0;
   }
 
   &-buttons {
