feature/ add checkbox logic

--- a/fc-angular2/src/fc-article-page/fc-article-page.less
+++ b/fc-angular2/src/fc-article-page/fc-article-page.less
@@ -1,4 +1,10 @@
 @import "../fc-shared-styles/mixins.less";
+@import "../fc-shared-styles/variables.less";
+
+.wrapper {
+  width: @wrapper-width;
+  margin: 0 auto;
+}
 
 .article {
   display: flex;
