feature/ delete save functionality

--- a/fc-angular2/src/fc-edit-page/fc-edit-page.less
+++ b/fc-angular2/src/fc-edit-page/fc-edit-page.less
@@ -1,6 +1,11 @@
 @import "../fc-shared-styles/mixins.less";
 @import "../fc-shared-styles/variables.less";
 
+.wrapper {
+  width: @wrapper-width;
+  margin: 0 auto;
+}
+
 .form-edit {
   display: flex;
   justify-content: space-around;
